# fastapi-kit

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
myapp/: main.py
src/fastapi-kit/: cli.py
src/fastapi_kit/: cli.py
src/fastapi_kit/commands/: generate_crud.py  startapp.py  startproject.py
