[metadata]
name = fastapi-kit
version = 0.1.0
description = CLI scaffolding tool for FastAPI
author = Sohail Ahmed
author_email = contact@sohail.work
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.8

[options.entry_points]
console_scripts =
    fastapikit=fastapi_kit.cli:main
